--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,18 +19,20 @@ jobs:
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
+      working-directory: ./MeFamily
 
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v3
       with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+        path: MeFamily/vendor
+        key: ${{ runner.os }}-php-${{ hashFiles('MeFamily/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
+      working-directory: ./MeFamily
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
